--- a/yaba2/templates/yaba2/base.html
+++ b/yaba2/templates/yaba2/base.html
@@ -14,56 +14,9 @@
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
-      /* Override some defaults */
-      html, body {
-        background-color: #eee;
-      }
-      body {
-        padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
-      }
-      .container > footer p {
-        text-align: center; /* center align it with the container */
-      }
-      .container {
-        width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
-      }
-
-      /* The white background content wrapper */
-      .content {
-        background-color: #fff;
-        padding: 20px;
-        margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-        -webkit-border-radius: 0 0 6px 6px;
-           -moz-border-radius: 0 0 6px 6px;
-                border-radius: 0 0 6px 6px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-                box-shadow: 0 1px 2px rgba(0,0,0,.15);
-      }
-
-      /* Page header tweaks */
-      .page-header {
-        background-color: #f5f5f5;
-        padding: 20px 20px 10px;
-        margin: -20px -20px 20px;
-      }
-
-      /* Styles you shouldn't keep as they are for displaying this base example only */
-      .content .span10,
-      .content .span4 {
-        min-height: 500px;
-      }
-      /* Give a quick and non-cross-browser friendly divider */
-      .content .span4 {
-        margin-left: 0;
-        padding-left: 19px;
-        border-left: 1px solid #eee;
-      }
-
-      .topbar .btn {
-        border: 0;
-      }
-
+        body {
+            padding-top: 60px;
+        }
     </style>
 
     <!-- Le fav and touch icons -->
@@ -77,8 +30,8 @@
   <body>
 
     <div class="topbar">
-      <div class="fill">
-        <div class="container">
+      <div class="topbar-inner">
+        <div class="container-fluid">
           <a class="brand" href="#">Project name</a>
 
           <ul class="nav">
@@ -86,33 +39,35 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <form action="" class="pull-right">
-            <input class="input-small" type="text" placeholder="Username">
+          <p class="pull-right">Logged in as <a href="#">username</a></p>
 
-            <input class="input-small" type="password" placeholder="Password">
-            <button class="btn" type="submit">Sign in</button>
-          </form>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
+      <div class="sidebar">
+        <div class="well">
+          <h5>Sidebar</h5>
+          <ul>
 
-      <div class="content">
-        {% block content %}{% endblock %}
-          <div class="span4">
-            {% block sidebar %}{% endblock %}
-          </div>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+
         </div>
       </div>
+      <div class="content">
+        {% block content %}{% endblock %}
 
-      <footer>
-        <p>&copy; f4ntasmic studios 2011</p>
+        <footer>
+          <p>&copy; f4ntasmic studios 2011</p>
 
-      </footer>
-
-    </div> <!-- /container -->
+        </footer>
+      </div>
+    </div>
 
   </body>
 </html>
-
