cleaning up some urls

--- a/yaba2/templates/yaba2/base.html
+++ b/yaba2/templates/yaba2/base.html
@@ -32,10 +32,10 @@
     <div class="topbar">
       <div class="topbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">Project name</a>
+            <a class="brand" href="{% url index %}">..::f4ntasmic studios::..</a>
 
           <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="{% url index %}">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
