--- a/yaba2/templates/yaba2/story_detail.html
+++ b/yaba2/templates/yaba2/story_detail.html
@@ -1,10 +1,11 @@
 {% extends "yaba2/base.html" %}
+{% load markup %}
 {% block title %}{{ story.title }}{% endblock %}
 {% block content %}
     <div class="row">
       <div class="span11">
           <h2>{{ story.title }}</h2>
-          <p>{{ story.post|safe }}</p>
+          <p>{{ story.post|markdown }}</p>
 
         <p><small>Author: {{ story.author.username }}</small><br />
         <small>Written: {{ story.created }}</small></p>
