--- a/yaba2/templates/yaba2/base.html
+++ b/yaba2/templates/yaba2/base.html
@@ -36,8 +36,8 @@
 
           <ul class="nav">
               <li class="active"><a href="{% url index %}">Home</a></li>
-            <li><a href="/about/">About</a></li>
-            <li><a href="/contact/">Contact</a></li>
+              <li><a href="{% url story-detail 'about' %}">About</a></li>
+              <li><a href="{% url story-detail 'contact' %}">Contact</a></li>
           </ul>
 
         </div>
